[package]
name = "text-renderer"
version = "0.1.0"
authors = ["Tristan Zander <knavetnz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.24.0" }
glium = { version = "0.29.0" }
rusttype = { version = "0.9.2", features = ["gpu_cache"] }